--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  height: 100%;
 }
 
 .App-logo {
@@ -36,3 +37,70 @@
     transform: rotate(360deg);
   }
 }
+
+.containerApp {
+  display: flex;
+  height: 100vh;
+  background-color: #D9D9D9;
+}
+
+.nav-container {
+  background-color: #FFFFFF;
+  margin: 10px;
+  width: 200px;
+  height: 100%; 
+  overflow-y: auto;
+  border-radius: 20px;
+}
+
+.nav {
+  list-style-type: none;
+  padding: 0;
+}
+
+.nav li {
+  padding: 10px;
+}
+
+.nav li a {
+  color: #2A0A0B;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav li a img {
+  vertical-align: middle;
+  margin-right: 10px;
+}
+
+.content-container {
+  background-color: #FFFFFF;
+  margin: 10px;
+  padding: 20px;
+  flex: 1;
+  height: 100%; 
+  overflow-y: auto;
+  border-radius: 20px;
+
+
+}
+
+h1 {
+  text-align: center;
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 900;
+  font-size: 36px;
+  line-height: 44px;
+  color: #2A0A0B;
+
+}
+
+.big {
+  border: 2px solid #2A0A0B;
+  transform: rotate(0deg);
+  color: #2A0A0B;
+  background-color: #2A0A0B;
+}
+
