--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -97,10 +97,26 @@ h1 {
 
 }
 
+h2 {
+  text-align: left;
+  margin-left: 10px;
+  font-family: 'Inter';
+  font-style: normal;
+  color: #2A0A0B;
+  font-weight: 500;
+}
+
+
 .big {
   border: 2px solid #2A0A0B;
   transform: rotate(0deg);
   color: #2A0A0B;
   background-color: #2A0A0B;
+}
+
+.containerApp {
+  font-family: 'Inter';
+  font-style: normal;
+  color: #2A0A0B;
 }
 
