--- a/frontend/src/components/styles/AllProducts.css
+++ b/frontend/src/components/styles/AllProducts.css
@@ -27,6 +27,7 @@
     color: red;
  }
  
+ 
 
 .notify .notifySub img , .notifySubLowStocked img{
     width: auto;
@@ -39,7 +40,7 @@
 
 .button-row {
     display: flex;
-    justify-content:space-between;
+    justify-content:left;
     align-items: center;
     width: 100%;
     padding: 10px;
@@ -158,17 +159,17 @@ td:last-child {
     cursor: pointer;
 }
 
-.update {
+table .update {
     background-color: #FFC107;
 }
 
-.damage {
+table .damage {
     
     background-color: #D4BB9D;
 
 }
 
-.dispose {
+table .dispose {
     background-color: #556B2F;
 }
 
@@ -198,7 +199,12 @@ td:last-child {
     background-color: #D4BB9D; 
 }
 
-.d-flex {
-    margin-bottom: 20px;
+.searchBar {
+    flex: 1; /* Occupy remaining space */
+    text-align: right; /* Align search bar to the right */
+    margin-left: 10px; /* Add margin to separate from other buttons */
 }
 
+table .button-delete {
+    background-color: #dc3545; /* Change to your desired delete button background color */
+}
