--- a/frontend/src/components/styles/AllProducts.css
+++ b/frontend/src/components/styles/AllProducts.css
@@ -125,9 +125,6 @@ tr:hover {
     margin-left: 10px;
 }
 
-.button:hover {
-    background-color: #0056b3; /* Change to your desired hover background color */
-}
 
 /* Separate style for the delete button */
 .button-delete {
@@ -161,24 +158,21 @@ td:last-child {
 
 table .update {
     background-color: #FFC107;
+    color: #2A0A0B;
+
 }
 
 table .damage {
     
-    background-color: #D4BB9D;
+    background-color: #2a0a0b62;
+    color: #2A0A0B;
+
 
 }
 
 table .dispose {
     background-color: #556B2F;
-}
 
-.link-button:hover {
-    background-color: #0056b3; /* Hover background color */
-}
-
-.link-button:active {
-    background-color: #004280; /* Active background color */
 }
 
 .button-row .link-button {
@@ -208,3 +202,55 @@ table .dispose {
 table .button-delete {
     background-color: #dc3545; /* Change to your desired delete button background color */
 }
+
+.containerFrom {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: auto;
+}
+
+.form-container {
+    border: 1px solid #ccc;
+    padding: 20px;
+    width: 100vh;
+}
+
+.form-container h2 {
+    text-align: center;
+}
+
+label {
+    font-weight: 700;
+    color: #2A0A0B;
+}
+
+.form-control {
+    background-color: #d4bb9d4f;
+}
+
+.btn.btn-primary {
+    background-color: #2A0A0B;
+    color: #D4BB9D;
+    padding: 8px 16px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    text-decoration: none;
+    transition: background-color 0.3s ease;
+    align-self: center;
+}
+
+.btn.btn-primary:hover  {
+    background-color: #D4BB9D;
+    color: #2A0A0B;
+}
+
+.filterCheckbox {
+    margin-right: 20px; /* Adjust spacing between checkboxes */
+  }
+  
+  .filterCheckbox input[type="checkbox"] {
+    margin-right: 5px; /* Adjust spacing between checkbox and label text */
+  }
+  
