--- a/frontend/src/components/styles/AllEmployees.css
+++ b/frontend/src/components/styles/AllEmployees.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -53,4 +53,4 @@ table {
   .button:hover {
     background-color: #005f79;
   }
-  
+   */
