--- a/frontend/src/components/styles/addEmp.css
+++ b/frontend/src/components/styles/addEmp.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
     text-align: center;
     height: 100%;
   }
@@ -93,6 +93,7 @@
     font-size: 36px;
     line-height: 44px;
     color: #2A0A0B;
+
   
   }
   
@@ -153,4 +154,4 @@
   
   .button-delete:hover {
     background-color: #d32f2f;
-  }
+  } */
